0.2.1

* Refactored enum sets
* Implemented state machine reader for MyriadEnumSet objects
* Added support for 'char' and 'vector' Myriad record types
* Added runtime and XML specification support for element_wise_value_providers (can be used together with vector typed fields)

0.2.0 - 2012-22-11

* new version of the XML specification language
* new data generator runtime designed around modular setter components
* multiple usability improvements 
* cleaned up and documented C++ code

0.1.7 - 2011-10-07

* adjusted constructor signature of the MultiplicativeGroupHydrator
* cleaned up SurrogateKeyGenerator related logic from FunctionPool, GeneratorConfig and ClusteredSelfReferenceHydrator
* added direct value inspection function method to the MultiplicativeGroupHydrator
* added value inspection based reference computation in ClusteredSelfReferenceHydrator
* removed default argument values from the name parameter in the GeneratorConfig::genIDBegin(), GeneratorConfig::genIDEnd() and GeneratorConfig::cardinality() methods
* refactored the configuration logic - now maintaining a single GeneratorConfig per node
* simplified build logic for non-C++ package components (python scripts, config files, etc)
* adapted the frontend python script to the changes in the -x parameter type in the toolkit Frontend
* removed obsolete configure() method from all generators
* merged SizingConfigurator logic to the new AbstractGeneratorConfig (simplifies extension creation)
* moved main.cpp from extensions to toolkit source folder (simplifies extension creation)
* added XML support for generator specific properties and partitioning configurations
* moved application constant from Frontend to a separate class (Constants)
* removed obsolete file TODO.txt

0.1.6 - 2011-10-05

* changed iteration logic in the CompoundEICG test - all componens are now adjusted at each step (a bit slower now, but should provide more robust random behavior)